--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,10 @@
 [tox]
-envlist = py37
+envlist = py36, py37, py38
 skipsdist = True
 
 [testenv]
-basepython = python3.7
-install_command = {basepython} {envdir}/bin/pip install {opts} {packages}
-list_dependencies_command = {basepython} {envdir}/bin/pip freeze
 deps =
-    -r{toxinidir}/requirements.txt
+    -rrequirements.txt
 
 [testenv:test]
 skip_install = true
@@ -18,6 +15,15 @@ whitelist_externals =
 commands =
     git submodule update --init --recursive
     bash -c '. venv/bin/activate && python manage.py test'
+
+[testenv:test_windows]
+skip_install = true
+deps =
+whitelist_externals =
+    git
+commands =
+    git submodule update --init --recursive
+    '. venv/bin/activate && python manage.py test'
 
 [testenv:lint]
 skip_install = true
@@ -39,7 +45,7 @@ deps =
     pep8-naming
     radon
 commands =
-    {basepython} {envdir}/bin/flake8 {posargs}
+    flake8 {posargs}
 
 [testenv:clean]
 deps =
