--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
-language: python
+language: 
+  - python
+  - shell
+osx_image: xcode11
+dist: xenial
 python:
   - '3.6'
   - '3.7'
@@ -11,23 +15,24 @@ git:
   depth: 25
   quiet: true
 cache: pip
+addons:
+  apt:
+    packages:
+      - libpng16-16
+      - xfonts-75dpi
+      - xfonts-base
+      - libffi-dev
+      - libxml2-dev
+      - libxslt1-dev
+before_install:
+    - export TRAVIS_COMMIT_MSG="$(git log --format=%B --no-merges -n 1)"
+    - export WKHTML_URL=https://downloads.wkhtmltopdf.org/0.12/0.12.5/
+    - export WKHTML_DEB=wkhtmltox_0.12.5-1.xenial_amd64.deb
+    - export WKHTML_PKG=wkhtmltox-0.12.5-1.macos-cocoa.pkg
+    - if [ "$TRAVIS_OS_NAME" = "linux" ]; then wget ${WKHTML_URL}${WKHTML_DEB} && sudo dpkg -i ${WKHTML_DEB}; fi
+    - if [ "$TRAVIS_OS_NAME" = "osx" ]; then wget ${WKHTML_URL}${WKHTML_PKG} && sudo installer -pkg ${WKHTML_DEB} -target /; fi
 jobs:
   include:
-  - name: Xenial Linux
-    dist: xenial
-    before_install:
-    - export TRAVIS_COMMIT_MSG="$(git log --format=%B --no-merges -n 1)"
-    - sudo apt-get install -y libpng16-16 xfonts-75dpi xfonts-base libffi-dev	
-      libxml2-dev libxslt1-dev 
-    - wget https://downloads.wkhtmltopdf.org/0.12/0.12.5/wkhtmltox_0.12.5-1.xenial_amd64.deb
-    - sudo dpkg -i wkhtmltox_0.12.5-1.xenial_amd64.deb
-  - name: OSX, Xcode 11
-    language: shell
-    osx_image: xcode11
-    before_install:
-    - export TRAVIS_COMMIT_MSG="$(git log --format=%B --no-merges -n 1)"
-    - wget https://downloads.wkhtmltopdf.org/0.12/0.12.5/wkhtmltox-0.12.5-1.macos-cocoa.pkg
-    - sudo installer -pkg wkhtmltox-0.12.5-1.macos-cocoa.pkg -target /
   - name: "Windows-10"
     language: shell
     env:
