--- a/.travis.yml
+++ b/.travis.yml
@@ -24,14 +24,13 @@ addons:
       - libffi-dev
       - libxml2-dev
       - libxslt1-dev
-env:
-    - JAVA_HOME="/c/Program Files/OpenJDK/jdk-13.0.2"
-    - PATH=/c/Python37:/c/Python37/Scripts:$JAVA_HOME/bin:$PATH
 before_install:
     - export TRAVIS_COMMIT_MSG="$(git log --format=%B --no-merges -n 1)"
     - export WKHTML_URL=https://downloads.wkhtmltopdf.org/0.12/0.12.5/
     - export WKHTML_DEB=wkhtmltox_0.12.5-1.xenial_amd64.deb
     - export WKHTML_PKG=wkhtmltox-0.12.5-1.macos-cocoa.pkg
+    - export JAVA_HOME="/c/Program Files/OpenJDK/jdk-13.0.2"
+    - export PATH=/c/Python37:/c/Python37/Scripts:$JAVA_HOME/bin:$PATH
     - if [ "$TRAVIS_OS_NAME" = "linux" ]; then wget ${WKHTML_URL}${WKHTML_DEB} && sudo dpkg -i ${WKHTML_DEB}; fi
     - if [ "$TRAVIS_OS_NAME" = "osx" ]; then wget ${WKHTML_URL}${WKHTML_PKG} && sudo installer -pkg ${WKHTML_DEB} -target /; fi
     - if [ "$TRAVIS_OS_NAME" = "windows" ]; then choco install python --version 3.7.5 && choco install wkhtmltopdf --version 0.12.5 && choco install openjdk --version 13.0.102; fi
