--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ addons:
       - libffi-dev
       - libxml2-dev
       - libxslt1-dev
+      - libssl-dev # for libcrypto.so
 before_install:
     - export TRAVIS_COMMIT_MSG="$(git log --format=%B --no-merges -n 1)"
     - export WKHTML_URL=https://downloads.wkhtmltopdf.org/0.12/0.12.5/
