--- a/.travis.yml
+++ b/.travis.yml
@@ -21,20 +21,8 @@ addons:
       - libxslt1-dev
       - libssl-dev # for libcrypto.so
 matrix:
-  include:      
-    - name: "Python 3.6.5 on macOS 10.13"
-      os: osx
-      osx_image: xcode9.4
-      language: shell
-      before_install:
-        - python3 --version
-    - name: "Python 3.7.3 on macOS 10.14"
-      os: osx
-      osx_image: xcode10.2
-      language: shell
-      before_install:
-        - python3 --version
-    - name: "Python 3.8.0 on macOS 10.15"
+  include:
+    - name: "Python 3.7.7 on macOS 10.14.6"
       os: osx
       osx_image: xcode11
       language: shell
@@ -70,8 +58,8 @@ matrix:
         - JAVA_HOME="/c/Program Files/OpenJDK/jdk-13.0.2"
 before_install:
     - export TRAVIS_COMMIT_MSG="$(git log --format=%B --no-merges -n 1)"
-    - export WKHTML_URL=https://downloads.wkhtmltopdf.org/0.12/0.12.5/
-    - export WKHTML_DEB=wkhtmltox_0.12.1.4-1.bionic_amd64.deb
+    - export WKHTML_URL=https://github.com/wkhtmltopdf/wkhtmltopdf/releases/download/0.12.5/
+    - export WKHTML_DEB=wkhtmltox_0.12.5-1.bionic_amd64.deb
     - export WKHTML_PKG=wkhtmltox-0.12.5-1.macos-cocoa.pkg
     - if [ "$TRAVIS_OS_NAME" = "linux" ]; then wget ${WKHTML_URL}${WKHTML_DEB} && sudo dpkg -i ${WKHTML_DEB}; fi
     - if [ "$TRAVIS_OS_NAME" = "osx" ]; then wget ${WKHTML_URL}${WKHTML_PKG} && sudo installer -pkg ${WKHTML_PKG} -target /; fi
